public/css/style.css
body {
    padding: 35px 25px 100px 25px;
    font: 14px Microsoft YaHei, Helvetica, Arial, sans-serif;
    background: rgba(124, 204, 229, 1);
}

.padding-bottom-70 {
    padding-bottom: 70px;
}

.padding-right-0 {
    padding-right: 0px;
}

.padding-left-0 {
    padding-left: 0;
}

.padding-left-120 {
    padding-left: 120px;
}

.padding-top-10 {
    padding-top: 10px;
}

.margin-top-10 {
    margin-top: 10px;
}

.no-href-link {
    cursor: pointer;
}

.red-bg {
    background-color: rgba(217, 83, 79, 1);
}

.blue-bg {
    background-color: blue;
}

.yellow-bg {
    background-color: #ffff00;
    background-origin: content-box;
}

.square-100 {
    width: 100px;
    height: 100px;

}

.height-100 {
    height: 100px;
}

.white-border-5 {
    border: 5px solid white;
}

.light-gray-bg {
    background-color: #adadad;
}

.dark-gray-bg {
    background-color: rgba(80, 80, 80, 0.5);
}

.cyan-bg {
    background-color: #62AFB5;

}

.pink-bg {
    background-color: #F96790;
}

.orange-bg {
    background-color: #F79B57;
}

.blue-bg {
    background-color: rgba(124, 204, 229, 1);
}

.diamond.square {
    width: 100px;
    height: 100px;
    margin: 25px;
    -ms-transform: rotate(-45deg);
    -webkit-transform: rotate(-45deg);
    transform: rotate(-45deg);
    overflow: hidden;
}

.diamond.pic {
    background: url('http://lain.bgm.tv/pic/user/l/000/00/28/2813.jpg?r=1377940764');
    width: 75px;
    height: 75px;
    margin: -25px;
    -ms-transform: rotate(45deg);
    -webkit-transform: rotate(45deg);
    transform: rotate(45deg);
}

.div-circle {
    border-radius: 50%;

}

.div-circle.responsive {
    padding-bottom: 95%;
    width: 100%;
}

.card {
    background: white;
    padding-top: 15px;
    padding-bottom: 15px;
    box-shadow: rgba(80, 80, 80, 0.1) 2px 4px;
}

.triangle-left {
    width: 0;
    height: 0;
    border-top: 50px solid transparent;
    border-right: 100px solid red;
    border-bottom: 50px solid transparent;
}

.tag {
    color: rgba(80, 80, 80, 0.7);
    padding: 3px 5px 3px 5px;
    font-size: smaller;
}

.tag .glyphicon {
    padding-right: 17px;
}

.tooltips {
    display: inline;
    position: relative;

}

.tooltips .inner {

    background: #428bca;

    bottom: 55px;
    color: #fff;
    min-width: 300px;
    left: -100px;
    padding: 5px 15px;
    position: absolute;
    z-index: 98;
    max-width: 300px;


}

.tooltips:before {
    border: solid;
    border-color: #428bca transparent;
    border-width: 19px 1px 0 13px;
    bottom: 40px;
    content: "";
    left: 50%;
    position: absolute;
    z-index: 99;
}

.left-triangle {
    -moz-transition: border-right-width 200ms;
    -o-transition: border-right-width 200ms;
    -webkit-transition: border-right-width 200ms; /* Safari */
    transition: border-right-width 200ms;

    cursor: pointer;
    width: 0;
    height: 0;
    border-right: 100px solid orange;
    border-top: 60px solid transparent;
    border-bottom: 25px solid transparent;
    position: relative;
}

.left-triangle:hover {
    border-right-width: 130px;
}

.left-triangle.cyan-bg {
    background-color: transparent;
    border-right-color: #62AFB5;
}

.left-triangle.orange-bg {
    background-color: transparent;
    border-right-color: #F79B57;
}

.left-triangle.red-bg {
    background-color: transparent;
    border-right-color: rgba(217, 83, 79, 1);
}

.left-triangle.blue-bg {
    border-right-color: #428bca;
    background-color: transparent;
}

.left-triangle.pink-bg {
    border-right-color: #F96790;
    background-color: transparent;
}

.side_menu_btn {

    position: absolute;
    color: white;
    transform: rotate(-14deg);
    -ms-transform: rotate(-14deg);
    -webkit-transform: rotate(-14deg);
    left: 46px;
    bottom: 0px;

}

.navbar-menu-btn {

    cursor: pointer;
    color: white;
    position: absolute;
    top: 35%;
    right: 40%;
    font-size: x-large;
    display: inline-block;

}

.icon-flipped {
    transform: scaleX(-1);
    -moz-transform: scaleX(-1);
    -webkit-transform: scaleX(-1);
    -ms-transform: scaleX(-1);
}

.side-menu {
    -moz-transition: margin-right 200ms;
    -o-transition: margin-right 200ms;
    -webkit-transition: margin-right 200ms; /* Safari */
    transition: margin-right 200ms;


    width: 120px;
    height: 100%;
    position: fixed;
    right: 0;
    top: 0;
    padding-top: 35px;


    margin-right: -100px;
}

.side-menu:hover {
    margin-right: 0;

}

.side-menu.show {
    margin-right: 0;

}

.main-content {

}

.progress-total {
    width:100%;
}

.progress-current {
    -moz-transition: width 200ms;
    -o-transition: width 200ms;
    -webkit-transition: width 200ms; /* Safari */
    transition: width 200ms;
    height:5px;
}

@media (max-width: 991px) {
    .push-aside {
        margin-left: -100px;
        margin-right: 100px;
    }
}

